1.0dev: listing content shouldn't overflow (fixes #10533)
git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@11156 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -656,6 +656,8 @@ table.listing tbody tr.odd { background-color: #f7f7f7 }
 table.listing tbody tr:hover { background: #eed !important }
 table.listing tbody tr.focus { background: #ddf !important }
 
+table.listing pre { white-space: pre-wrap }
+
 /* Styles for the page history table
    (extends the styles for "table.listing") */
 #fieldhist td { padding: 0 .5em }
